# widebot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
docker/: docker-compose.yml  openssl.cnf.2
include/: widebot.hpp
lib/Wideinator/: CMakeLists.txt  wideinator.ggo
lib/Wideinator/include/: cmdline.h  image.hpp  wideinator.hpp
lib/Wideinator/src/: cmdline.c  main.cpp  wideinator.cpp
lib/widepeepolib/: .gitignore  CMakeLists.txt
lib/widepeepolib/include/: image.hpp  widepeepolib.hpp
lib/widepeepolib/src/: widepeepolib.cpp
src/: main.cpp  widebot.cpp
